[package]
authors = ["ubuntu"]
edition = "2018"
readme = "README.md"
name = "mcb32"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

embedded-hal = "0.2.3"
nb = "0.1.2"

ili9341 = {version = "0.4.1", features = ["graphics"] }
embedded-graphics = "0.6"
# display-interface-spi = "0.4.0"
display-interface = "0.4.0"


[dependencies.stm32f1xx-hal]
version = "0.7"
features = ["rt", "stm32f107", "connectivity"]


# this lets you use `cargo fix`!
[[bin]]
name = "mcb32"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
